# ragnest

./: .gitignore  LICENSE  Makefile  README.md  config.example.yaml  docker-compose.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  scorecard.yml
deploy/: com.raghub.worker.plist  rag-hub-worker.service  rag-hub-worker.timer
src/ragnest/: __init__.py  app.py  config.py  exceptions.py  log.py
src/ragnest/cli/: __init__.py  db_setup.py  worker.py
src/ragnest/db/: __init__.py  backend.py  schema.py  sqlite_schema.py
src/ragnest/db/backends/: __init__.py  postgres.py  sqlite.py
src/ragnest/db/repositories/: __init__.py  base.py  batch.py  chunk.py  document.py  knowledge_base.py  queue.py  watch_path.py
src/ragnest/mcp/: __init__.py  formatting.py  server.py
src/ragnest/mcp/tools/: __init__.py  batches.py  documents.py  export.py  ingestion.py  kb_management.py  search.py  system.py  watch_paths.py
src/ragnest/models/: db.py  domain.py
src/ragnest/services/: __init__.py  embedding_service.py  export_service.py  file_reader.py  ingest_service.py  kb_service.py  system_service.py  worker_service.py
tests/: conftest.py
tests/fixtures/: config.test.yaml
tests/fixtures/sample_docs/: sample.md  sample.txt
tests/unit/: test_config.py  test_embedding_service.py  test_file_reader.py  test_kb_service.py  test_models.py
